# nagi-rs

./: Cargo.toml  Makefile  README.md  README_ja.md
crates/nagi-cli/: Cargo.toml
crates/nagi-cli-test/: Cargo.toml
crates/nagi-cli-test/src/: lib.rs
crates/nagi-cli-test/tests/: driver.rs
crates/nagi-cli/examples/: basic.rs  subcommands.rs
crates/nagi-cli/examples/basic/: README.md
crates/nagi-cli/examples/subcommands/: README.md
crates/nagi-cli/src/: command.rs  diagnostic.rs  lib.rs  parser.rs  runtime.rs  signal_unix.rs  value.rs
crates/nagi-cli/tests/: cli_behavior.rs  cli_fixtures.rs
crates/nagi-cli/tests/support/: mod.rs
crates/nagi-surface/: Cargo.toml
crates/nagi-surface/src/: cell.rs  geometry.rs  lib.rs  snapshot.rs  surface.rs
crates/nagi-surface/tests/: surface_fixtures.rs
crates/nagi-text/: Cargo.toml
crates/nagi-text/src/: generated.rs  grapheme.rs  lib.rs  operations.rs  unicode.rs  utf8.rs  width.rs
crates/nagi-text/tests/: text_fixtures.rs
crates/nagi-tui/: Cargo.toml
crates/nagi-tui-test/: Cargo.toml
crates/nagi-tui-test/src/: lib.rs  manual_subscription.rs  manual_task.rs
crates/nagi-tui-widgets/: Cargo.toml
crates/nagi-tui-widgets/examples/dashboard/: README.md  main.rs
crates/nagi-tui-widgets/examples/extended_widget_gallery/: README.md  main.rs
crates/nagi-tui-widgets/examples/file_browser/: README.md  main.rs
crates/nagi-tui-widgets/examples/filtered_list/: README.md  main.rs
crates/nagi-tui-widgets/examples/form_validation/: README.md  main.rs
crates/nagi-tui-widgets/examples/multi_pane_log_viewer/: README.md  main.rs
crates/nagi-tui-widgets/examples/widget_gallery/: README.md  main.rs
crates/nagi-tui-widgets/src/: bar_chart.rs  button.rs  calendar.rs  chart.rs  checkbox.rs  command_palette.rs  event.rs  file_picker.rs  fixture_support.rs  help.rs  lib.rs  list.rs  modal.rs  navigation.rs  paginator.rs  progress.rs  radio.rs  scrollbar.rs  select.rs  sparkline.rs  spinner.rs  table.rs  tabs.rs  text_area.rs  text_area_history.rs  tree.rs  tree_state.rs
crates/nagi-tui-widgets/tests/: advanced_widgets.rs  modern_widgets_runtime.rs  widget_runtime.rs  widget_snapshots.rs
crates/nagi-tui/benches/: scroll_viewport.rs
crates/nagi-tui/examples/async_search/: README.md  main.rs
crates/nagi-tui/examples/command_palette/: README.md  main.rs
crates/nagi-tui/examples/counter/: README.md  main.rs
crates/nagi-tui/examples/log_viewer/: README.md  main.rs
crates/nagi-tui/examples/virtual_scroll/: README.md  main.rs
crates/nagi-tui/src/: ansi_text.rs  app.rs  clock.rs  effect.rs  identity.rs  input.rs  interaction.rs  layout.rs  lib.rs  node.rs  panel.rs  renderer.rs  rich_text.rs  routing.rs  runtime.rs  subscription.rs  subscription_supervisor.rs  supervisor.rs  terminal.rs  text_edit.rs  wake.rs
crates/nagi-tui/src/terminal_unix/: mod.rs  session.rs  system.rs  wake.rs
crates/nagi-tui/tests/: core_node_fixtures.rs  fixture_parser.rs  geometry_fixtures.rs  runtime_fixtures.rs  support
crates/nagi-vt/: Cargo.toml
crates/nagi-vt/src/: event.rs  input.rs  lib.rs  output.rs  style.rs
crates/nagi-vt/tests/: vt_fixtures.rs
tools/nagi-unicode-gen/: Cargo.toml
tools/nagi-unicode-gen/src/: main.rs
