[package]
name = "nagi-cli-test"
description = "Process-free test support for Nagi CLI applications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
nagi-cli = { path = "../nagi-cli", version = "0.2.0" }
