[package]
name = "nagi-cli"
description = "Command graph, parser, and runtime primitives for Nagi CLI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "deny"
unsafe_code = "allow"

[dependencies]
nagi-text = { path = "../nagi-text", version = "0.2.0" }
