[package]
name = "nagi-text"
description = "Unicode grapheme and terminal cell text primitives for Nagi terminal applications"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints]
workspace = true
