[package]
name = "nagi-tui"
description = "Application and runtime facade for Nagi TUI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[lints.rust]
missing_docs = "deny"
unsafe_code = "allow"

[dependencies]
nagi-surface = { path = "../nagi-surface", version = "0.1.0" }
nagi-text = { path = "../nagi-text", version = "0.1.0" }
nagi-vt = { path = "../nagi-vt", version = "0.1.0" }
